--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Raza Embroidery",
-  "name": "Raza Embroidery",
+  "short_name": "EmbroideryOS",
+  "name": "EmbroideryOS",
   "icons": [
     {
       "src": "/icons/android-chrome-192x192.png",
