--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sparkpair-raza-embroidery",
+  "name": "sparkpair-embroideryos",
   "private": true,
   "version": "0.0.0",
   "type": "module",
